test/parser/cases/invalid/small/incomplete_type_argument.cp
main()
{
    let value: array<i32,> = [1];
}
